vertical align logo correctly

--- a/core/app/assets/stylesheets/base/topbar.scss
+++ b/core/app/assets/stylesheets/base/topbar.scss
@@ -15,6 +15,7 @@
 .topbar-logo {
   @extend %centering-inner;
   margin-right: 20px;
+  line-height: 0px;
 }
 
 .topbar-logo-img{
